# QGIS

i18n/: qgis_en.ts  qgis_fi.ts  qgis_ko.ts
ms-windows/: set_env.bat  set_env_64.bat
ms-windows/osgeo4w/: package.cmd
src/app/: qgisapp.cpp  qgisapp.h
src/providers/: CMakeLists.txt
src/providers/ngi/: CMakeLists.txt  QgsNGIDataSource.cpp  QgsNGIDataSource.h  QgsNGIFeatureIterator.cpp  QgsNGIFeatureIterator.h  QgsNGILayer.cpp  QgsNGILayer.h  QgsNGILayerData.cpp  QgsNGILayerData.h  QgsNGIProvider.cpp  QgsNGIProvider.h
src/ui/: qgisapp.ui
tests/testdata/: 367100364.nda  367100364.ngi
